fix(client-interaction): show carousel button on mobile
on mobile device the carousel's navigation buttons are now always visible. On desktop, like before,
the buttons will be visible only on hover.

fix #8

--- a/interaction/app/default/src/scss/theme.scss
+++ b/interaction/app/default/src/scss/theme.scss
@@ -2139,6 +2139,20 @@ body, input, textarea{ font-family: $appFontFamily; }
     height: 100%;
     width: 100%;
   }
+  &.mobile{ 
+    #vvc-normal-container{
+      #vvc-chat{
+        #vvc-messages{
+          .tpl-navigation{
+            .tpl-right,
+            .tpl-left {
+              display: block;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 #vvc-minimized-layout {
   @include minimized();
